Page text update & small fixes.